# clipboard_sync_client

./: .gitignore  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  crypto.rs  lib.rs  main.rs  state.rs  sync.rs
src/components/: AppLogo.tsx  ClipboardHistory.tsx  DeviceList.tsx  LandingPage.tsx  PairingScreen.tsx  Settings.tsx
src/lib/: api.ts  storage.ts
src/styles/: global.css  landing.css
