[package]
name = "clipboard-sync"
version = "1.0.0"
edition = "2021"

[lib]
name = "clipboard_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "clipboard-sync"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tokio-util = "0.7"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
